--- a/Theater/PageAdmin/PageAddPerformance.xaml
+++ b/Theater/PageAdmin/PageAddPerformance.xaml
@@ -3,31 +3,44 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:theater.PageAdmin"
+      xmlns:local="clr-namespace:theater"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PageAddPerformance">
 
     <Grid>
         <StackPanel x:Name="adminStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBox x:Name="addPerformanceTitle"/>
-            <ComboBox x:Name="cbGenre" HorizontalAlignment="Stretch" Loaded="ComboBox_Loaded">
+            <TextBox x:Name="addPerformanceTitle" local:TextBoxExtensions.Hint="Введите название"/>
+            <ComboBox x:Name="cbGenre" HorizontalAlignment="Stretch">
                 <ComboBoxItem  IsHitTestVisible="False" IsEnabled="False" Content="Выберите жанр:"/>
                 <ComboBoxItem Content="драма"/>
             </ComboBox>
-            <TextBox x:Name="addPerformanceYearCreated"/>
-            <TextBox x:Name="addPerformanceAuthor"/>
-            <TextBox x:Name="addPerformanceDuration"/>
+            <TextBox x:Name="addPerformanceYearCreated" local:TextBoxExtensions.Hint="Введите год создания"/>
+            <TextBox x:Name="addPerformanceAuthor" local:TextBoxExtensions.Hint="Введите автора"/>
+            <TextBox x:Name="addPerformanceDuration" local:TextBoxExtensions.Hint="Введите длительность"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBox x:Name="addPerformancePhoto"/>
-                <Button x:Name="btnAddPhoto" Content="..." Margin="5" Click="btnAddPhoto_Click"/>
-                <TextBox x:Name="addPerformanceDescription"/>
-                <TextBox x:Name="addPerformancePhoto1"/>
-                <Image x:Name="imgPhotoPreview" Width="200" Height="200"/>
+                <StackPanel Orientation="Vertical" Width="210" Height="147">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="150">
+                        <TextBox x:Name="addPerformancePhoto" Width="115"/>
+                        <Button x:Name="btnAddPhoto" 
+                                Content="..." 
+                                HorizontalContentAlignment="Center" 
+                                VerticalContentAlignment="Center" 
+                                Background="#EEEEEE" Foreground="Black" 
+                                Click="btnAddPhoto_Click" 
+                                Width="20" Height="25" 
+                                Style="{StaticResource baseButtonStyle}"/>
+                    </StackPanel>
+                    <TextBox x:Name="addPerformanceDescription"/>
+                    <TextBox x:Name="addPerformancePhoto1"/>
+                </StackPanel>
+                <Border Background="#FAFAFA" CornerRadius="10" Width="210" Height="140">
+                    <Image x:Name="imgPhotoPreview" Width="200" Height="130" Margin="5"/>
+                </Border>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btnAddPerformance"  Content="Добавить спектакль" Margin="5" Click="btnAddPerformance_Click"/>
-                <Button x:Name="btnBack" Content="Вернуться" Margin="5" Click="btnBack_Click"/>
+                <Button x:Name="btnAddPerformance"  Content="Добавить спектакль" Click="btnAddPerformance_Click" Style="{StaticResource baseButtonStyle}"/>
+                <Button x:Name="btnBack" Content="Вернуться" Click="btnBack_Click" Style="{StaticResource baseButtonStyle}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
