--- a/Theater/PageEdit/PageEditShowtime.xaml
+++ b/Theater/PageEdit/PageEditShowtime.xaml
@@ -3,18 +3,18 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:theater.PageEdit"
+      xmlns:local="clr-namespace:theater"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PageEditShowtime">
 
     <Grid>
         <StackPanel x:Name="adminStackPanel" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBox x:Name="editShowtimeDate"/>
-            <TextBox x:Name="editShowtimePrice"/>
+            <TextBox x:Name="editShowtimeDate" local:TextBoxExtensions.Hint="Введите дату и время проведения"/>
+            <TextBox x:Name="editShowtimePrice" local:TextBoxExtensions.Hint="Введите цену"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="btneditShortime"  Content="Сохранить изменения" Margin="5" Click="btnEditShowtime_Click"/>
-                <Button x:Name="btnBack" Grid.Column="1" Content="Вернуться" Margin="5" Click="btnBack_Click"/>
+                <Button x:Name="btneditShortime"  Content="Сохранить изменения" Margin="5" Click="btnEditShowtime_Click" Style="{StaticResource baseButtonStyle}"/>
+                <Button x:Name="btnBack" Grid.Column="1" Content="Вернуться" Margin="5" Click="btnBack_Click" Style="{StaticResource baseButtonStyle}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
