--- a/Theater/PageMain/PageCreateAcc.xaml
+++ b/Theater/PageMain/PageCreateAcc.xaml
@@ -3,37 +3,20 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:theater.PageMain"
+      xmlns:local="clr-namespace:theater"
       mc:Ignorable="d" 
       d:DesignHeight="350" d:DesignWidth="800"
       Title="PageCreateAcc">
 
     <Grid>
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <Label>Введите имя:</Label>
-                <TextBox x:Name="regName"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label>Введите номер телефона или почтовый адрес:</Label>
-                <TextBox x:Name="contacts"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label>Введите логин:</Label>
-                <TextBox x:Name="regLogin"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label>Введите пароль:</Label>
-                <PasswordBox x:Name="regPass" PasswordChanged="rpChanged"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Label>Повторите пароль:</Label>
-                <PasswordBox x:Name="regPassRepeat" PasswordChanged="rprChanged"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <Button x:Name="btnCreate" HorizontalAlignment="Center" Background="Green" IsEnabled="False" Click="btnCreate_Click">Создать</Button>
-                <Button HorizontalAlignment="Center" Background="Blue" Click="Button_Click">Вернуться</Button>
-            </StackPanel>
+            <TextBox x:Name="regName" local:TextBoxExtensions.Hint="Введите имя"/>
+            <TextBox x:Name="contacts" local:TextBoxExtensions.Hint="Введите телефон"/>
+            <TextBox x:Name="regLogin" local:TextBoxExtensions.Hint="Введите логин"/>
+            <PasswordBox x:Name="regPass" PasswordChanged="rpChanged"/>
+            <PasswordBox x:Name="regPassRepeat" PasswordChanged="rprChanged"/>
+            <Button x:Name="btnCreate" HorizontalAlignment="Center" Background="Green" IsEnabled="False" Click="btnCreate_Click" Style="{StaticResource baseButtonStyle}">Создать</Button>
+            <Button Click="Button_Click" Style="{StaticResource baseButtonStyle}">Вернуться</Button>
         </StackPanel>
     </Grid>
 </Page>
