--- a/Theater/PageMain/PageLogin.xaml
+++ b/Theater/PageMain/PageLogin.xaml
@@ -3,19 +3,17 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:theater.PageMain"
+      xmlns:local="clr-namespace:theater"
       mc:Ignorable="d" 
       d:DesignHeight="350" d:DesignWidth="800"
       Title="PageLogin">
 
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Label Content="Введите логин:" d:LayoutOverrides="Width, Height" Margin="5" HorizontalAlignment="Center"/>
-            <TextBox x:Name="login" TextWrapping="Wrap" Text="" Width="120" Margin="5"/>
-            <Label Content="Введите пароль:" d:LayoutOverrides="Width, Height" Margin="5" HorizontalAlignment="Center"/>
-            <PasswordBox x:Name="password" Width="120" Margin="5"/>
-            <Button Content="Войти" Margin="5" Width="120" Click="Button_Click"/>
-            <Button Content="Регистрация" Margin="5" Width="120" Click="Button_Click_1"/>
+            <TextBox x:Name="login" TextWrapping="Wrap" Text="" local:TextBoxExtensions.Hint="Введите логин"/>
+            <PasswordBox x:Name="password"/>
+            <Button Content="Войти" Style="{StaticResource baseButtonStyle}" Click="Button_Click"/>
+            <Button Content="Регистрация" Style="{StaticResource baseButtonStyle}" Click="Button_Click_1"/>
         </StackPanel>
 
     </Grid>
