--- a/Theater/PageMain/PageShowtimes.xaml
+++ b/Theater/PageMain/PageShowtimes.xaml
@@ -8,65 +8,63 @@
       Title="PageShowtimes">
 
     <Grid>
-       
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="300"/>
-            <RowDefinition Height="50"/>
-        </Grid.RowDefinitions>
-        
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <TextBox x:Name="search" Height="30" TextChanged="searchChanged"/>
-            <ComboBox x:Name="sortPerform" Width="70" SelectionChanged="sortChanged">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="4*"/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBox x:Name="search" TextChanged="searchChanged"/>
+            <ComboBox x:Name="sortPerform" SelectionChanged="sortChanged">
                 <TextBlock>От А до Я</TextBlock>
                 <TextBlock>От Я до А</TextBlock>
                 <TextBlock>Год создания - возрастание</TextBlock>
                 <TextBlock>Год создания - убывание</TextBlock>
             </ComboBox>
-            <ComboBox x:Name="filterPerform" Width="70" SelectionChanged="filterChanged">
+            <ComboBox x:Name="filterPerform" SelectionChanged="filterChanged">
                 <TextBlock>Драма</TextBlock>
             </ComboBox>
-            <Button x:Name="btnBack" Click="btnBack_Click">Вернуться</Button>
-            <Button x:Name="btnGoToBasket" Click="btnGoToBasket_Click">Корзина</Button>
-            <Button x:Name="btnAddShowtime" Visibility="Collapsed" Click="btnAddShowtime_Click">Добавить представление</Button>
-            <Button x:Name="btnDeleteShowtime" Visibility="Collapsed" Click="btnDeleteShowtime_Click">Удалить представление</Button>
-            <Button x:Name="btnEditShowtime" Visibility="Collapsed" Click="btnEditShowtime_Click">Редактировать представление</Button>
+            <Button x:Name="btnBack" Click="btnBack_Click" Style="{StaticResource baseButtonStyle}">Вернуться</Button>
+            <Button x:Name="btnGoToBasket" Click="btnGoToBasket_Click" Style="{StaticResource baseButtonStyle}">Корзина</Button>
+            <Button x:Name="btnAddShowtime" Visibility="Collapsed" Click="btnAddShowtime_Click" Style="{StaticResource baseButtonStyle}">Добавить представление</Button>
+            <Button x:Name="btnDeleteShowtime" Visibility="Collapsed" Click="btnDeleteShowtime_Click" Style="{StaticResource baseButtonStyle}">Удалить представление</Button>
+            <Button x:Name="btnEditShowtime" Visibility="Collapsed" Click="btnEditShowtime_Click" Style="{StaticResource baseButtonStyle}">Редактировать представление</Button>
+            <TextBlock x:Name="tbCounter" Text="Не найдено" HorizontalAlignment="Center" Foreground="White"/>
         </StackPanel>
-        
-        <ListView x:Name="listOfShowtimes" Grid.Row="1" ScrollViewer.CanContentScroll="False">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="3*"/>
-                            <ColumnDefinition Width="150"/>
-                        </Grid.ColumnDefinitions>
-                        <Image Source="{Binding ShowtimePhotoPath}" Grid.Column="0" HorizontalAlignment="Left"/>
-                        <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Stretch">
-                            <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
-                                <Run Text="Название: "/>
-                                <Run Text="{Binding PerformanceTitle, Mode=OneWay}"/>
-                            </TextBlock>
-                            <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
-                                <Run Text="Дата: "/>
-                                <Run Text="{Binding date, StringFormat={}{0:dd.MM.yyyy HH:mm}}"/>
-                            </TextBlock>
-                            <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
-                                <Run Text="Цена: "/>
-                                <Run Text="{Binding price}"/>
-                            </TextBlock>
-                        </StackPanel>
-                        <Button x:Name="btnAddToBasket" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Click="btnAddToBasket_Click">Добавить в корзину</Button>
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        
-        <TextBlock x:Name="tbCounter" Text="Не найдено" Grid.Row="2" HorizontalAlignment="Left"/>
-    
+
+        <Border  Grid.Column="1" Style="{StaticResource ListViewBorder}">
+            <ListView x:Name="listOfShowtimes" ScrollViewer.CanContentScroll="False" Margin="25">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition Width="250"/>
+                                <ColumnDefinition Width="150"/>
+                            </Grid.ColumnDefinitions>
+                            <Image Source="{Binding ShowtimePhotoPath}" Grid.Column="0" HorizontalAlignment="Left"/>
+                            <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Stretch" Margin="10" VerticalAlignment="Center">
+                                <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
+                        <Run Text="Название: "/>
+                        <Run Text="{Binding PerformanceTitle, Mode=OneWay}"/>
+                                </TextBlock>
+                                <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
+                        <Run Text="Дата: "/>
+                        <Run Text="{Binding date, StringFormat={}{0:dd.MM.yyyy HH:mm}}"/>
+                                </TextBlock>
+                                <TextBlock Width="auto" TextWrapping="Wrap" Height="auto">
+                        <Run Text="Цена: "/>
+                        <Run Text="{Binding price}"/>
+                                </TextBlock>
+                            </StackPanel>
+                            <Button x:Name="btnAddToBasket" Height="30" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="2" Style="{StaticResource baseButtonStyle}" Click="btnAddToBasket_Click">Добавить в корзину</Button>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Border>
     </Grid>
 </Page>
